# Little-Tree-Downloader

./: .gitignore  404.html  CHANGELOG.md  CHANGELOG.zh.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  README.md  README.zh.md  SECURITY.md  SECURITY.zh.md  index.html  index.md  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pypi.yml
advanced/: index.html  index.md
api-reference/: index.html  index.md
authentication/: index.html  index.md
batch-download/: index.html
cli/: index.html  index.md
configuration/: index.html  index.md
docs/en/: index.md
docs/en/advanced/: index.md
docs/en/api-reference/: index.md
docs/en/authentication/: index.md
docs/en/batch-download/: index.md
docs/en/cli/: index.md
docs/en/configuration/: index.md
docs/en/error-handling/: index.md
docs/en/getting-started/: index.md
docs/en/proxy/: index.md
docs/zh/: index.md
docs/zh/advanced/: index.md
docs/zh/api-reference/: index.md
docs/zh/authentication/: index.md
docs/zh/batch-download/: index.md
docs/zh/cli/: index.md
docs/zh/configuration/: index.md
docs/zh/error-handling/: index.md
docs/zh/getting-started/: index.md
docs/zh/proxy/: index.md
error-handling/: index.html  index.md
getting-started/: index.html  index.md
proxy/: index.html  index.md
search/: search_index.json
src/littledl/: __init__.py  __main__.py  auth.py  batch.py  callback.py  chunk.py  compat.py  config.py  connection.py  detector.py  downloader.py  exceptions.py  global_pool.py  limiter.py  monitor.py  proxy.py  resume.py  reuse.py  scheduler.py  strategy.py  utils.py  worker.py  writer.py
src/littledl/i18n/: __init__.py  (+2 more)
tests/: test_littledl.py
zh/: index.html
zh/advanced/: index.html
zh/api-reference/: index.html
zh/authentication/: index.html
zh/batch-download/: index.html
zh/cli/: index.html
zh/configuration/: index.html
zh/error-handling/: index.html
zh/getting-started/: index.html
zh/proxy/: index.html
