[project]
name = "littledl"
version = "0.3.0"
description = "A high-performance download library with IDM-style multi-threaded chunked downloading, smart scheduling, and resume support"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Little Tree", email = "zsxiaoshu@outlook.com" }]
keywords = ["download", "multi-threaded", "chunked", "resume", "idm", "http2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiofiles>=24.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
progress = [
    "rich>=13.0.0",
]

[project.scripts]
littledl = "littledl.__main__:main"

[project.urls]
Homepage = "https://github.com/shu-shu-1/Little-Tree-Downloader"
Repository = "https://github.com/shu-shu-1/Little-Tree-Downloader"
Issues = "https://github.com/shu-shu-1/Little-Tree-Downloader/issues"
Security = "https://github.com/shu-shu-1/Little-Tree-Downloader/security/policy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/littledl"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
